2001-01-08  Adam Fedor  <fedor@gnu.org>

	* configure.in: Enable ffcall by default (unless the libraries
	don't exist).

2001-01-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSGArray.h: removed
	* Headers/Foundation/NSArray.h: merge core/non-core classes.
	* Source/GNUmakefile: replace NSGArray with GSArray.
	* Source/NSGArray.m: converted to GSArray.m
	* Source/NSArray.m: simplified by merging core/non-core classes.
	Use placeholder class when allocating constant arrays.
	* Source/GSArray.m: simplified version of GSArray.m
	Added GSPlaceholderArray.
	* Source/NSSerializer.m: use GSInlineArray where possible.
	* Source/GSSet.m: Provide decoding of NSGSet for backward compatibility.
	* Source/NSException.m: Avoid recursion in exception handler.

2001-01-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gsdoc.gsdoc: Tidied and fixed a few typos/spelling errors.

2001-01-04  Jonathan Gapen  <jagapen@home.com>

	* configure.in, aclocal.m4, acconfig.h: Replace libxml detection with
	autoconf macro from libxml 2.2.10 installation.
	* configure, Headers/gnustep/base/config.h.in: Regenerate.
	* Headers/gnustep/base/GSXML.h, base/Source/GSXML.m,
	base/Tools/gsdoc.m: Use proper libxml #includes.

2001-01-03  Adam Fedor  <fedor@gnu.org>

	* configure.in: Change test for objc forwarding hook to match gcc
	patch.
	* Source/GSFFCallInvocation.m: Use new forwarding hook.

2001-01-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSBundle.m: fix for checking windows executable file
	extensions - reported by michael.scheibler@onevision.de

2001-01-03  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* Source/NSObjCRuntime.m (GSInstanceVariableInfo): fixes.
	* Source/NSObject.m ([NSObject -handleQueryWithUnboundKey:]): raise an
	exception.
	([NSObject -handleTakeValue:forUnboundKey:]): changed exception.
	([NSObject -unableToSetNilForKey:]): likewise.
	([NSObject -storedValueForKey:]),
	([NSObject -valueForKey:]): check for null selector before calling