@@ -1,3 +1,12 @@
+2001-01-09  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Headers/Foundation/NSGAttributedString.h: removed
+	* Source/NSGAttributedString.m: renamed to GSAttributedString.m
+	concrete classes renamed for consistency with other gstep libs.
+	* Source/NSAttributedString.m: classes renamed
+	* Source/GNUmakefile: replace NSGAttrinbutedString with GS.
+	Don't try to install old header.
+
 2001-01-08  Adam Fedor  <fedor@gnu.org>
 
 	* configure.in: Enable ffcall by default (unless the libraries
